@@ -1,19 +1,19 @@
 #==============================================================================
-#RELEASE Location of external products
+# RELEASE_SITE Location of EPICS_SITE_TOP, EPICS_MODULES, and BASE_MODULE_VERSION
 # Run "gnumake clean uninstall install" in the application
 # top directory each time this file is changed.
 
 #==============================================================================
-# Define the top of the EPICS tree for your site.
-# We will build some tools/scripts that allow us to
-# change this easily when relocating software.
-#==============================================================================
-EPICS_SITE_TOP=/afs/slac/g/lcls/epics/R3-14-12-4_1-1
-BASE_SITE_TOP=/afs/slac/g/lcls/epics/R3-14-12-4_1-1/base
-MODULES_SITE_TOP=/afs/slac/g/lcls/epics/R3-14-12-4_1-1/modules
-IOC_SITE_TOP=/afs/slac/g/lcls/epics/R3-14-12-4_1-1/iocTop
-EPICS_BASE_VER=base-R3-14-12-4_1-1
+BASE_MODULE_VERSION=R7.0.3.1-1.0
+EPICS_SITE_TOP=/afs/slac/g/lcls/epics
+BASE_SITE_TOP=/afs/slac/g/lcls/epics/base
+MODULES_SITE_TOP=/afs/slac/g/lcls/epics/R7.0.3.1-1.0/modules
+EPICS_MODULES=/afs/slac/g/lcls/epics/R7.0.3.1-1.0/modules
+IOC_SITE_TOP=/afs/slac/g/lcls/epics/iocTop
+EPICS_BASE_VER=R7.0.3.1-1.0
 PACKAGE_SITE_TOP=/afs/slac/g/lcls/package
+MATLAB_PACKAGE_TOP=/afs/slac/g/lcls/package/matlab
+PSPKG_ROOT=/afs/slac/g/lcls/pkg_mgr
 TOOLS_SITE_TOP=/afs/slac/g/lcls/tools
 ALARM_CONFIGS_TOP=/afs/slac/g/lcls/tools/AlarmConfigsTop
 #==============================================================================
