@@ -25,8 +25,8 @@ CHECK_RELEASE = YES
 # If you only want to build for the host then uncomment the line below and no cross targets
 # will be built.  Remember EPICS will build for the HOST ARCH by default.
 #CROSS_COMPILER_TARGET_ARCHS =
-CROSS_COMPILER_TARGET_ARCHS = RTEMS-beatnik linuxRT_glibc-x86_64
-BUILD_FOR_HOST_ARCH = ""
+CROSS_COMPILER_TARGET_ARCHS = RTEMS-beatnik
+
 
 # To install files into a location other than $(TOP) define
 #   INSTALL_LOCATION here.
