@@ -1,10 +1,0 @@
-# -include $(TOP)/configure/CONFIG_SITE
-
-### NOTE: SETTABLE_CONFIG
-EVRMA_VERSION	= evrma-R1-0-p4
-EVRMA_ARCH		= $(LINUXRT_BUILDROOT_VERSION)-x86_64
-
-evrma_DIR		= $(PACKAGE_SITE_TOP)/evrma/$(EVRMA_VERSION)/$(EVRMA_ARCH)/lib
-
-OP_SYS_CPPFLAGS += -D_DEFAULT_SOURCE
-
